--- a/app/assets/stylesheets/b-home.scss
+++ b/app/assets/stylesheets/b-home.scss
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 100vw;
     background-color: whitesmoke ;
-    display: flex;
+    display: inline-block;
     text-align: center;
     // justify-content: center;
 }
