--- a/app/assets/stylesheets/c-logins.scss
+++ b/app/assets/stylesheets/c-logins.scss
@@ -7,6 +7,9 @@
     margin-right: -50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #473d6e;
+    background-color: whitesmoke;
 }
 
 .loginmessage{
