--- a/app/assets/stylesheets/d-posts.scss
+++ b/app/assets/stylesheets/d-posts.scss
@@ -1,7 +1,13 @@
+.postpage{
+    text-align: center;
+    display: inline-block;
+    background-color: whitesmoke;
+}
+
 .post{
     padding: 10px;
     margin: 20px;
-    border: 1px solid red;
+    border-radius: 10px;
     text-align: left;
     background-color: white;
     width: 500px;
@@ -10,7 +16,13 @@
 .posttitle{
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+.postdetails{
+    width: inherit;
+    border-bottom: 2px solid gray;
+    padding-bottom: 10px;
 }
 
 .status{
@@ -23,4 +35,9 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
     margin-bottom: 20px;
+}
+
+.body{
+    height: 200px;
+    overflow-y: auto;
 }
